--- a/main.css
+++ b/main.css
@@ -16,7 +16,6 @@ body{
     margin: 0;
 }
 .navigation{
-    display: inline-block;
     height: 120px;
     background: black;
     border-top: #40aed7 solid 5px;
@@ -39,36 +38,36 @@ body{
     color: #979797;
     font-family: Georgia;
     font-size: 11px;
-    font-weight: 400;
     line-height: 11px;
 }
 
 .links{
-    position: absolute;
-    top: 30px;
-    right: 40px;
-    height:50px;
-
-}
-.links li{
-    display: inline-block;
+    display: flex;
+    justify-content: space-around;
+    padding-top: 20px;
+    list-style-type: none;
     
 }
 
 .links a{
     text-decoration: none;
     color: white;
-    margin-right: 10px;
-    line-height: 40px;
-    padding-top:10px;
+    margin-right: 20px;
+    padding-top: 10px;
     padding-bottom: 10px;
-    
 }
 
 .links a:hover{
     background:#3fadd7;
     border-radius: 25%;
     cursor: pointer;
+}
+
+.logo{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .logo p{
